cmake_minimum_required(VERSION 3.11)

project(cpp-primer5)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(ch01)
add_subdirectory(ch02)
add_subdirectory(ch07)
add_subdirectory(ch09)
add_subdirectory(ch10)
add_subdirectory(ch11)
add_subdirectory(ch12)
add_subdirectory(ch13)
add_subdirectory(ch14)
add_subdirectory(ch15)


