add_executable(ex13_05_08 ex13_05_08_11_22.cpp)
add_executable(ex13_13 ex13_13.cpp)
add_executable(ex13_17 ex13_17.cpp)
add_executable(ex13_18_19 ex13_18_19_Employee.cpp)
add_executable(ex13_25_26 ex13_25_26.cpp)
add_executable(ex13_27 ex13_27.cpp)
add_executable(ex13_30_31 ex13_30_31.cpp)


add_executable(ex13_44_demo ex13_44_demo.cpp ex13_44_String.cpp)

add_executable(ex13_47_demo ex13_48_demo.cpp ex13_44_String.cpp)

add_executable(test test.cpp)

add_executable(HasPtrDemo1 HasPtrDemo1.cpp)
add_executable(HasPtrDemo2 HasPtrDemo2.cpp)

add_executable(ex13_MessageFolderDemo ex13_MessageFolderDemo.cpp ex13_34_37_Message.cpp ex13_36_Folder.cpp)

add_executable(ex13_39_Demo ex13_39_Demo.cpp ex13_39_StrVector.cpp)

add_executable(ex13_54 ex13_54.cpp)
add_executable(ex13_58_demo ex13_58_demo.cpp)