add_executable(test test.cpp)
add_executable(ex14_2_Sales_data ex14_2_test.cpp)
add_executable(ex14_7 ex14_7.cpp ../ch13/ex13_44_String.cpp)
add_executable(ex14_16_test ex14_16_test.cpp)

add_executable(ex14_34_test ex14_34_test.cpp)
add_executable(ex14_35_test ex14_35_test.cpp)
add_executable(ex14_36_test ex14_36_test.cpp)
add_executable(ex14_37_test ex14_37_test.cpp)
add_executable(ex14_38_test ex14_38_test.cpp)
add_executable(ex14_39_test ex14_39_test.cpp)
add_executable(ex14_40_test ex14_40_test.cpp)
add_executable(ex14_42_test ex14_42_test.cpp)
add_executable(ex14_43_test ex14_43_test.cpp)
add_executable(ex14_44_test ex14_44_test.cpp)