add_executable(ex15_3_test ex15_3_test.cpp)
add_executable(ex15_5_test ex15_5_test.cpp)
add_executable(ex15_7_test ex15_7_test.cpp)
add_executable(ex15_11_test ex15_11_test.cpp)
add_executable(ex15_test ex15_15_test.cpp)
add_executable(ex15_16_test ex15_16_test.cpp)
add_executable(ex15_17_test ex15_17_test.cpp)

add_executable(ex15_test0 ex15_test.cpp)